'connection_timeout_added'